--- a/lightningless-version.html
+++ b/lightningless-version.html
@@ -1166,8 +1166,8 @@
                         counterpartys_rev_preimages = state.bobs_revocation_preimages;
                     }
                     //TODO: force close if the following errors are thrown
-                    if ( counterpartys_revhashes.length && !data_from_recipient.hasOwnProperty( "revocation_of_previous_state" ) ) return console.log( 'your counterparty tried to cheat you by not sending requisite data' );
-                    if ( counterpartys_revhashes.length ) {
+                    if ( counterpartys_revhashes.length > 1 && !data_from_recipient.hasOwnProperty( "revocation_of_previous_state" ) ) return console.log( 'your counterparty tried to cheat you by not sending requisite data' );
+                    if ( counterpartys_revhashes.length > 1 ) {
                         var revocation_of_previous_state = data_from_recipient.revocation_of_previous_state;
                         //if your counterparty was the last person to send money, and he did so in a state update that did *not* include an htlc, then he will have a revocation hash that he should *not* revoke here; you will use it next time you send him money, and if he revokes it here, he won't be able to safely receive that money; this also applies if 
                         var num_of_hashes_behind = 2;
@@ -2253,7 +2253,6 @@
                     try {
                         //validate the fee_address, if any
                         var fee_address = null;
-                        console.log( 0, json.msg_value );
                         if ( json.msg_value.hasOwnProperty( "fee_address" ) ) {
                             fee_address = json.msg_value.fee_address;
                             //TODO: uncomment the line below
@@ -2398,7 +2397,6 @@
                     delete hedgehog_client.two_way_comms[ message_identifier ];
 
                     //get the next message from the server
-                    console.log( 0 );
                     var message_identifier = "two_way_comms";
                     delete hedgehog_client.two_way_comms[ message_identifier ];
                     var loop = async () => {
@@ -2408,11 +2406,9 @@
                     }
                     var event = await loop();
                     delete hedgehog_client.two_way_comms[ message_identifier ];
-                    console.log( 1 );
 
                     //tell the user what's up
                     showModal( `<p>Payment detected -- bridging from L1 to hedgehog, please wait</p>` );
-                    console.log( 2 );
 
                     //parse the message from the server
                     var json = JSON.parse( event.content );
@@ -2420,7 +2416,6 @@
                     var data_for_htlc_p1 = json.msg_value;
                     delete data_for_htlc_p1[ "message_identifier" ];
                     var my_revhashes = await hedgehog.receiveHtlcPartOne( data_for_htlc_p1 );
-                    console.log( 3 );
 
                     //send channel data to server
                     var msg_for_server = JSON.stringify({
